# APD_INFO139

./: README.md
apd/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
backend/: Makefile
backend/include/: Automaton.hpp  Stack.hpp  Transition.hpp
backend/src/: Automaton.cpp  Stack.cpp  backend.cpp  main.cpp
frontend/: interfaz.py
